<?xml version="1.0" encoding="UTF-8"?>
<!-- 
 ! Copyright 2018 Jochen Wiedmann
 ! 
 ! Licensed under the Apache License, Version 2.0 (the "License");
 ! you may not use this file except in compliance with the License.
 ! You may obtain a copy of the License at
 ! 
 !   http://www.apache.org/licenses/LICENSE-2.0
 ! 
 ! Unless required by applicable law or agreed to in writing, software
 ! distributed under the License is distributed on an "AS IS" BASIS,
 ! WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ! See the License for the specific language governing permissions and
 ! limitations under the License.
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.github.jochenw.afw</groupId>
    <artifactId>afw</artifactId>
    <version>0.6.1-SNAPSHOT</version>
  </parent>
  <artifactId>afw-core</artifactId>
  <name>AFW (Core)</name>
  <description>Application Framework (Core)</description>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <build>
    <defaultGoal>clean install</defaultGoal>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.5</version>
          <configuration>
             <source>1.8</source>
             <target>1.8</target>
          </configuration>
        </plugin>
        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
        <plugin>
        	<groupId>org.eclipse.m2e</groupId>
        	<artifactId>lifecycle-mapping</artifactId>
        	<version>1.0.0</version>
        	<configuration>
        		<lifecycleMappingMetadata>
        			<pluginExecutions>
        				<pluginExecution>
        					<pluginExecutionFilter>
        						<groupId>org.codehaus.mojo</groupId>
        						<artifactId>
        							javacc-maven-plugin
        						</artifactId>
        						<versionRange>[2.6,)</versionRange>
        						<goals>
        							<goal>javacc</goal>
        						</goals>
        					</pluginExecutionFilter>
        					<action>
        						<ignore />
        					</action>
        				</pluginExecution>
        			</pluginExecutions>
        		</lifecycleMappingMetadata>
        	</configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.2.0</version>
            <configuration>
                <failOnWarnings>true</failOnWarnings>
                <failOnError>true</failOnError>
                <excludePackageNames>com.github.jochenw.afw.core.el.jcc</excludePackageNames>
                <source>8</source>
            </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
		<groupId>org.codehaus.mojo</groupId>
		<artifactId>javacc-maven-plugin</artifactId>
		<version>2.6</version>
		<configuration>
		  <grammarEncoding>UTF-8</grammarEncoding>
		  <sourceDirectory>src/main/javacc</sourceDirectory>
		</configuration>
		<executions>
		  <execution>
		    <goals>
		      <goal>javacc</goal>
		    </goals>
		    <phase>generate-sources</phase>
		  </execution>
		</executions>
	  </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.7.1</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>org.apache.logging.log4j</groupId>
  		<artifactId>log4j-api</artifactId>
  		<version>2.17.2</version>
  	</dependency>
  	<dependency>
  		<groupId>org.slf4j</groupId>
  		<artifactId>slf4j-api</artifactId>
  		<version>1.6.1</version>
  		<scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.logging.log4j</groupId>
  		<artifactId>log4j-core</artifactId>
  		<version>2.17.2</version>
  	</dependency>
  	<dependency>
  		<groupId>javax.servlet</groupId>
  		<artifactId>servlet-api</artifactId>
  		<version>2.5</version>
  		<scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>javax.inject</groupId>
  		<artifactId>javax.inject</artifactId>
  		<version>1</version>
  	</dependency>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.13.1</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>javax.inject</groupId>
  		<artifactId>javax.inject-tck</artifactId>
  		<version>1</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>com.google.inject</groupId>
  		<artifactId>guice</artifactId>
  		<version>5.0.1</version>
  		<scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>javax.annotation</groupId>
  		<artifactId>jsr250-api</artifactId>
  		<version>1.0</version>
  		<scope>provided</scope>
  	</dependency>
  	<dependency>
        <groupId>javax.json</groupId>
        <artifactId>javax.json-api</artifactId>
        <version>1.1</version>
        <scope>provided</scope>
    </dependency>
    <dependency>
        <groupId>org.glassfish</groupId>
        <artifactId>javax.json</artifactId>
        <version>1.1</version>
        <scope>provided</scope>
    </dependency>
    <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpcore</artifactId>
        <version>4.4.13</version>
        <scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.bouncycastle</groupId>
    	<artifactId>bcprov-jdk15on</artifactId>
    	<version>1.69</version>
    	<scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.apache.groovy</groupId>
    	<artifactId>groovy</artifactId>
    	<version>4.0.0-beta-2</version>
    	<scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>com.h2database</groupId>
    	<artifactId>h2</artifactId>
    	<version>2.1.210</version>
    	<scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.bouncycastle</groupId>
    	<artifactId>bcpkix-jdk15on</artifactId>
    	<scope>provided</scope>
    	<version>1.69</version>
    </dependency>
    <dependency>
        <groupId>ch.qos.reload4j</groupId>
        <artifactId>reload4j</artifactId>
        <version>1.2.20</version>
        <scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>com.github.jochenw.afw</groupId>
    	<artifactId>afw-di</artifactId>
    	<version>0.6.1-SNAPSHOT</version>
    </dependency>
  </dependencies>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.0.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-changes-plugin</artifactId>
        <version>2.12.1</version>
        <configuration>
          <githubAPIPort>80</githubAPIPort>
          <githubAPIScheme>http</githubAPIScheme>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.0.1</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>javadoc</report>
            </reports>
          </reportSet>
        </reportSets>
        <configuration>
          <excludePackageNames>com.github.jochenw.afw.core.el.jcc</excludePackageNames>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
</project>
